Added carto data to map

--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
 <body>
   <div>
 	<div id="map-container"></div>
-	<div class="title-color banner" id="top-banner">
+	<div class="title-color banner">
 	  <div class="pad-banner clearfix"> 
-	    <span> NYC Census Explorer </span>
-	    <span class="align-right"> <a href="https://github.com/NYC-GIS-Group/census-explorer" target="_blank"><img src="images/fork.svg" alt="fork" height="36" hspace="10"></a> <img src="images/info.svg" alt="info" height="36" hspace="10"></span>
+	    <span> Pilot: Heat Activation Tool </span>
+	    <span class="align-right"> <a href="https://github.com/NYC-GIS-Group/ccf-test" target="_blank"><img src="images/fork.svg" alt="fork" height="36" hspace="10"></a> <img src="images/info.svg" alt="info" height="36" hspace="10"></span>
 	  </div>
 	</div>
 	
-	<div class="footer-color banner" id="bttm-banner">
+<!--	<div class="footer-color banner" id="bttm-banner">
 	  <div class="pad-banner clearfix"> 
 		<ul class="menu">
 		  <li><a href="https://www.google.com/" target="_blank">SELECT AN AREA</a></li>
@@ -41,7 +41,7 @@
 		</ul>
 	  </div>
 	</div>
-	
+-->	
   </div>
   
   <script src="https://cartodb-libs.global.ssl.fastly.net/cartodb.js/v3/3.15/cartodb.js"></script>
